Add background music and whisper audio elements

--- a/game.html
+++ b/game.html
@@ -204,7 +204,10 @@
   </div>
   <p id="response"></p>
 
-  <audio id="creepySound" src="https://cdn.pixabay.com/audio/2021/09/15/audio_b9a82c54fb.mp3"></audio>
+<audio id="bgMusic" src="BGmusic3.mp3" loop></audio>
+<audio id="whisper1" src="BGmusic1.mp3"></audio>
+<audio id="whisper2" src="BGmusic2.mp3"></audio>
+
 
   <script>
     function typeText(element, text) {
